src/components/landpage/team-card/styles.module.scss
.container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  z-index: 3;

  .flipCard {
    position: relative;
    width: 196px;
    height: 236px;
    perspective: 1000px;
    cursor: pointer;
    
    & > button {
      position: absolute;
      height: 30px;
      width: 30px;
      right: 0;
      z-index: 2;
      cursor: pointer;
    }

    &:hover {
      .flipCardInner {
        transform: rotateY(180deg);
      }
    }
    
    .flip {
      @media screen and (max-width: 1100px) {
        transform: rotateY(180deg);
      }
    }

    .reflip {
      @media screen and (max-width: 1100px) {
        transform: rotateY(0deg);
      }
    }

    .flipCardFront, .flipCardBack {
      position: absolute;
      width: 100%;
      height: 100%;
      backface-visibility: hidden;
      background-color: #fff;

      & > span {
        font-family: 'UpheavalPro';
        text-transform: uppercase;
        position: relative;
        display: block;
        left: 50%;
        transform: translateX(-50%);
      }

      .image {
        margin-top: 8px;
        width: 180px;
        height: 180px;
      }

      .name {
        position: relative;
        top: 7px;
        font-size: 22px;
        color: #55412a;
      }

      .position {
        top: 4px;
        color: #f48f21;
      }
    }

    .flipCardFront {
      box-shadow: 0 20px 8px rgba(0, 0, 0, .5);
    }
    
    .flipCardBack {
      transform: rotateY(180deg);
    }

    .flipCardInner {
      position: relative;
      width: 100%;
      height: 100%;
      text-align: center;
      transition: transform 0.6s;
      transform-style: preserve-3d;
      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    }
  }
}

